Update SEO metadata and Open Graph tags

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <!-- ====== BASIC SEO ====== -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Anson Zhou – Stanford MD/MBA | AI in Healthcare</title>
-  <meta name="description" content="Official website of Anson Zhou, Stanford MD/MBA candidate and Microsoft Health Futures researcher exploring AI in healthcare." />
-  <meta name="keywords" content="Anson Zhou, Stanford, Knight-Hennessy, Microsoft Health Futures, AI in Healthcare, MD MBA" />
+  <title>Anson Zhou</title>
+  <meta name="description" content="Official website of Anson Zhou, Stanford MD/MBA candidate." />
+  <meta name="keywords" content="Anson Zhou, Stanford, Knight-Hennessy, Microsoft, Bain, AI, MD, MBA, Healthcare, Medicine" />
 
   <!-- ====== OPEN GRAPH / TWITTER ====== -->
   <meta property="og:title" content="Anson Zhou" />
-  <meta property="og:description" content="Stanford MD/MBA · Knight-Hennessy Scholar · Microsoft Health Futures" />
+  <meta property="og:description" content="Stanford MD/MBA · Knight-Hennessy Scholar · Pear VC" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://anson-zhou.github.io/" />
   <!-- Replace with your image path when you add one -->
-  <meta property="og:image" content="https://anson-zhou.github.io/assets/og-image.png" />
+  <meta property="og:image" content="images/profile.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <!-- ====== FAVICON (optional) ====== -->
