Update Open Graph image URL in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://anson-zhou.github.io/" />
   <!-- Replace with your image path when you add one -->
-  <meta property="og:image" content="images/profile.png" />
+  <meta property="og:image" content="anson-zhou.github.io/images/profile.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <!-- ====== FAVICON (optional) ====== -->
