Revise biography and update social media links
Updated personal information and links in the biography section.

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
       "name": "Stanford University"
     },
     "sameAs": [
-      "https://www.linkedin.com/in/ansonzhou",
-      "https://scholar.google.com/citations?user=ETbbsnoAAAAJ",
-      "https://orcid.org/0000-0002-XXXX-XXXX",
+      "https://www.linkedin.com/in/anson-zhou",
+      "https://scholar.google.com/citations?user=ETbbsnoAAAAJ&hl=en&inst=8389273007308439986",
+      "https://https://orcid.org/0000-0001-6045-6083",
       "https://github.com/anson-zhou"
     ]
   }
   </script>
 
-  <!-- ====== STYLE (single-file for simplicity) ====== -->
+  <!-- ====== STYLE ====== -->
   <style>
     :root{
       /* THEME — change --bg to set background color */
@@ -113,9 +113,13 @@
       <section class="section">
         <h2 style="margin:0 0 8px 0;font-size:20px">About</h2>
         <p>
-          I’m an MD/MBA candidate at Stanford focused on AI in healthcare, currently collaborating with Microsoft Health
-          Futures on real-world evidence and synthetic control arms. I care about patient-centric tools, clinical decision
-          support, and translating research into scalable products.
+          Hi! I am an MD/MBA candidate at Stanford University School of Medicine & Graduate School of Business, funded through the Knight-Hennessy Scholarship. I am also a Venture Fellow on the health + bio investing teams at Pear VC.
+
+          I graduated with a BS in biomedical engineering from Johns Hopkins University and was previously a strategy consultant at Bain & Company in its private equity practice. I also worked at Microsoft Research in the Health Futures division, driving strategy for biomedical AI moonshots. 
+
+          My other experiences include startup roles across regenerative medicine and insurtech, pipeline strategy for computational drug discovery, and academic technology transfer. 
+
+          I am interested in all things healthcare, life sciences, AI/ML, and venture!
         </p>
       </section>
 
@@ -123,8 +127,6 @@
       <section class="section">
         <h2 style="margin:0 0 8px 0;font-size:20px">Highlights</h2>
         <ul>
-          <li><a href="/research.html">Monopath DAGs: structuring patient trajectories (NeurIPS D&B 2025)</a></li>
-          <li><a href="/experiences.html">Affiliated Researcher – Microsoft Health Futures</a></li>
           <li><a href="https://denninghouse.stanford.edu/" target="_blank" rel="noopener">Knight-Hennessy Scholars</a></li>
         </ul>
       </section>
