--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   <title>Anson Zhou</title>
   <meta name="description" content="Official website of Anson Zhou, Stanford MD/MBA candidate." />
   <meta name="keywords" content="Anson Zhou, Stanford, Knight-Hennessy, Microsoft, Bain, AI, MD, MBA, Healthcare, Medicine" />
+  <link rel="canonical" href="https://anson-zhou.github.io/" />
 
   <!-- ====== OPEN GRAPH / TWITTER ====== -->
   <meta property="og:title" content="Anson Zhou" />
   <meta property="og:description" content="Stanford MD/MBA · Knight-Hennessy Scholar · Pear VC" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://anson-zhou.github.io/" />
-  <!-- Replace with your image path when you add one -->
-  <meta property="og:image" content="anson-zhou.github.io/images/profile.png" />
+  <!-- Make this an absolute URL -->
+  <meta property="og:image" content="https://anson-zhou.github.io/assets/profile.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <!-- ====== FAVICON (optional) ====== -->
@@ -28,14 +29,11 @@
     "name": "Anson Zhou",
     "url": "https://anson-zhou.github.io",
     "jobTitle": "MD/MBA Candidate",
-    "affiliation": {
-      "@type": "CollegeOrUniversity",
-      "name": "Stanford University"
-    },
+    "affiliation": {"@type":"CollegeOrUniversity","name":"Stanford University"},
     "sameAs": [
       "https://www.linkedin.com/in/anson-zhou",
       "https://scholar.google.com/citations?user=ETbbsnoAAAAJ&hl=en&inst=8389273007308439986",
-      "https://https://orcid.org/0000-0001-6045-6083",
+      "https://orcid.org/0000-0001-6045-6083",
       "https://github.com/anson-zhou"
     ]
   }
@@ -44,16 +42,15 @@
   <!-- ====== STYLE ====== -->
   <style>
     :root{
-      /* THEME — change --bg to set background color */
-      --bg: #ffffff;         /* ← change this to e.g. #f9fafb to tweak quickly */
-      --text: #0f172a;
-      --muted: #475569;
-      --accent: #0ea5e9;
-      --card: #ffffff;
-      --border: #e2e8f0;
-      --shadow: 0 8px 30px rgba(2,8,23,.06);
-      --radius: 18px;
-      --maxw: 960px;
+      --bg:#ffffff;
+      --text:#0f172a;
+      --muted:#475569;
+      --accent:#0b3d91;      /* darker blue for links */
+      --card:#ffffff;
+      --border:#e2e8f0;
+      --shadow:0 8px 30px rgba(2,8,23,.06);
+      --radius:18px;
+      --maxw:960px;
     }
     html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;line-height:1.6;}
     a{color:var(--accent);text-decoration:none}
@@ -66,16 +63,20 @@
     .hero img{width:120px;height:120px;object-fit:cover;border-radius:16px;border:1px solid var(--border)}
     h1{font-size:32px;line-height:1.2;margin:0}
     .subtitle{color:var(--muted);margin-top:6px}
-    .links{display:flex;flex-wrap:wrap;gap:10px;margin-top:14px}
-    .pill{display:inline-block;border:1px solid var(--border);padding:8px 12px;border-radius:999px;background:#fff}
+    .links-inline{margin-top:14px;font-weight:600}
+    .links-inline a{margin:0 8px}
+    .links-inline .slash{color:var(--muted);margin:0 4px}
     .section{margin-top:26px}
     footer{margin:36px 0;color:var(--muted);font-size:14px}
     @media (max-width:720px){
       .hero{grid-template-columns:1fr}
       .hero img{width:96px;height:96px}
-      nav{display:none} /* keep clean; you can add a mobile menu later */
+      nav{display:none}
     }
   </style>
+
+  <!-- load your email scramble helper -->
+  <script src="/assets/scramble.js" defer></script>
 </head>
 <body>
   <div class="wrap">
@@ -89,47 +90,57 @@
     </header>
 
     <main class="card">
-      <!-- ====== HERO: photo + name + subtitle ====== -->
+      <!-- ====== HERO ====== -->
       <section class="hero">
-        <!-- Upload your image to /assets/profile.jpg -->
         <img src="/assets/profile.jpg" alt="Anson Zhou portrait" />
         <div>
           <h1>Anson Zhou</h1>
           <div class="subtitle">Stanford MD/MBA · Knight-Hennessy Scholar · Microsoft Health Futures</div>
 
-          <!-- ====== QUICK LINKS (edit freely) ====== -->
-          <div class="links">
-            <a class="pill" href="mailto:you@domain.com">Email</a>
-            <a class="pill" href="https://www.linkedin.com/in/ansonzhou" target="_blank" rel="noopener">LinkedIn</a>
-            <a class="pill" href="https://scholar.google.com/citations?user=ETbbsnoAAAAJ" target="_blank" rel="noopener">Google Scholar</a>
-            <a class="pill" href="https://orcid.org/0000-0002-XXXX-XXXX" target="_blank" rel="noopener">ORCID</a>
-            <a class="pill" href="https://github.com/anson-zhou" target="_blank" rel="noopener">GitHub</a>
-            <a class="pill" href="/assets/Anson_Zhou_CV.pdf" target="_blank" rel="noopener">CV (PDF)</a>
+          <!-- ====== SIMPLE INLINE LINKS (no bubbles) ====== -->
+          <div class="links-inline" aria-label="key links">
+            <a href="/assets/Anson_Zhou_CV.pdf" target="_blank" rel="noopener">CV</a>
+            <span class="slash">/</span>
+            <a href="https://scholar.google.com/citations?user=ETbbsnoAAAAJ" target="_blank" rel="noopener">Google Scholar</a>
+            <span class="slash">/</span>
+            <a href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a>
+            <span class="slash">/</span>
+            <a href="https://github.com/anson-zhou" target="_blank" rel="noopener">GitHub</a>
           </div>
+
+          <!-- ====== OBFUSCATED EMAIL (unscramble) ====== -->
+          <p style="margin-top:10px">
+            <b>email:</b>
+            <span id="emaddress"><noscript><i>enable javascript to view</i></noscript></span>
+          </p>
+          <script>
+            // This assumes scramble.js defines scrambledString(targetEl, className, scrambled, orderArray)
+            window.addEventListener('DOMContentLoaded', function(){
+              try {
+                new scrambledString(
+                  document.getElementById("emaddress"),
+                  "emscramble",
+                  "@cda.bemecys.cueurc",        // ← your scrambled string
+                  [9,13,18,7,12,3,2,14,17,5,8,11,16,10,19,4,15,1,6] // ← permutation
+                );
+              } catch(e) { /* fail quietly */ }
+            });
+          </script>
         </div>
       </section>
 
-      <!-- ====== BIO (edit text only) ====== -->
+      <!-- ====== BIO ====== -->
       <section class="section">
         <h2 style="margin:0 0 8px 0;font-size:20px">About</h2>
         <p>
           Hi! I am an MD/MBA candidate at Stanford University School of Medicine & Graduate School of Business, funded through the Knight-Hennessy Scholarship. I am also a Venture Fellow on the health + bio investing teams at Pear VC.
-
           I graduated with a BS in biomedical engineering from Johns Hopkins University and was previously a strategy consultant at Bain & Company in its private equity practice. I also worked at Microsoft Research in the Health Futures division, driving strategy for biomedical AI moonshots. 
-
           My other experiences include startup roles across regenerative medicine and insurtech, pipeline strategy for computational drug discovery, and academic technology transfer. 
-
           I am interested in all things healthcare, life sciences, AI/ML, and venture!
         </p>
       </section>
 
-      <!-- ====== FEATURED LINKS (add/remove items) ====== -->
-      <section class="section">
-        <h2 style="margin:0 0 8px 0;font-size:20px">Highlights</h2>
-        <ul>
-          <li><a href="https://denninghouse.stanford.edu/" target="_blank" rel="noopener">Knight-Hennessy Scholars</a></li>
-        </ul>
-      </section>
+      <!-- (Highlights section removed) -->
     </main>
 
     <footer>
