--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
         <img src="images/profile.png" alt="Anson Zhou portrait" />
         <div>
           <h1>Anson Zhou</h1>
-          <div class="subtitle">Stanford MD/MBA · Knight-Hennessy Scholar · Microsoft Health Futures</div>
+          <div class="subtitle">Stanford MD/MBA · Knight-Hennessy Scholar · Pear VC</div>
 
-          <!-- ====== SIMPLE INLINE LINKS (no bubbles) ====== -->
+          <!-- ====== INLINE LINKS (no bubbles) ====== -->
           <div class="links-inline" aria-label="key links">
             <a href="/assets/Anson_Zhou_CV.pdf" target="_blank" rel="noopener">CV</a>
             <span class="slash">/</span>
@@ -116,18 +116,15 @@
             <b>email:</b>
             <span id="emaddress"><noscript><i>enable javascript to view</i></noscript></span>
           </p>
-          <script>
-            window.addEventListener('DOMContentLoaded', function(){
-              try {
-                new scrambledString(
-                  document.getElementById("emaddress"),
-                  "emscramble",
-                  "@cda.bemecys.cueurc",
-                  [9,13,18,7,12,3,2,14,17,5,8,11,16,10,19,4,15,1,6]
-                );
-              } catch(e) {}
-            });
-          </script>
+            <script>
+              // Scrambled version of "ansonz@stanford.edu"
+              new scrambledString(
+                document.getElementById("emaddress"),
+                "emscramble",
+                "@ntdoa.nfueazrsonsdst",
+                [8,6,17,4,13,9,11,10,16,5,14,15,12,18,1,19,7,2,3]
+              );
+            </script>
         </div>
       </section>
 
