Add multiple links to social profiles in index.html

--- a/index.html
+++ b/index.html
@@ -102,12 +102,18 @@
 
           <!-- ====== INLINE LINKS (no bubbles) ====== -->
           <div class="links-inline" aria-label="key links">
-            <a href="/assets/Anson_Zhou_CV.pdf" target="_blank" rel="noopener">CV</a>
+            <a href="https://www.linkedin.com/in/anson-zhou/" target="_blank" rel="noopener">LinkedIn</a>
             <span class="slash">/</span>
             <a href="https://scholar.google.com/citations?user=ETbbsnoAAAAJ" target="_blank" rel="noopener">Google Scholar</a>
             <span class="slash">/</span>
-            <a href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a>
+            <a href="https://orcid.org/0000-0001-6045-6083" target="_blank" rel="noopener">ORCID</a>
+            <span class="slash">/</span>  
+            <a href="https://profiles.stanford.edu/anson-zhou" target="_blank" rel="noopener">Stanford Profile</a>
+            <span class="slash">/</span>            
+            <a href="https://x.com/ansonyzhou" target="_blank" rel="noopener">Twitter</a>
             <span class="slash">/</span>
+            <a href="https://bsky.app/profile/ansonyzhou.bsky.social" target="_blank" rel="noopener">Bluesky</a>
+            <span class="slash">/</span>                        
             <a href="https://github.com/anson-zhou" target="_blank" rel="noopener">GitHub</a>
           </div>
 
