Update script source path for scramble.js

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   </style>
 
   <!-- load your email scramble helper -->
-  <script src="/assets/scramble.js" defer></script>
+  <script src="/scramble.js" defer></script>
 </head>
 <body>
   <div class="wrap">
