Revise biography section in index.html
Updated the biography section with additional details and links.

--- a/index.html
+++ b/index.html
@@ -136,26 +136,36 @@
           
       </section>
 
-      <!-- ====== BIO ====== -->
-      <section class="section">
-        <h2 style="margin:0 0 8px 0;font-size:20px">About</h2>
-        <p>
-          Hi! I am an MD/MBA candidate at Stanford University School of Medicine & Graduate School of Business, funded through the Knight-Hennessy Scholarship. I am also a Venture Fellow on the health + bio investing teams at Pear VC.
-        <p>
+<!-- ====== BIO ====== -->
+<section class="section">
+  <h2 style="margin:0 0 8px 0;font-size:20px">About</h2>
 
-        <p>  
-          I graduated with a BS in biomedical engineering from Johns Hopkins University and was previously a strategy consultant at Bain & Company in its private equity practice. I also worked at Microsoft Research in the Health Futures division, driving strategy for biomedical AI moonshots. 
-        <p>
+  <p>
+    Hi! I am an MD/MBA candidate at 
+    <a href="https://med.stanford.edu/profiles/anson-zhou" target="_blank" rel="noopener">
+      Stanford University School of Medicine
+    </a> 
+    &amp; Graduate School of Business, funded through the 
+    <a href="https://knight-hennessy.stanford.edu/people/anson-zhou" target="_blank" rel="noopener">
+      Knight-Hennessy Scholarship
+    </a>. 
+    I am also a Venture Fellow on the health + bio investing teams at Pear VC.
+  </p>
 
-        <p>  
-          My other experiences include startup roles across regenerative medicine and insurtech, pipeline strategy for computational drug discovery, and academic technology transfer. 
-        <p>  
+  <p>
+    I graduated with a BS in biomedical engineering from Johns Hopkins University and was previously a strategy consultant at Bain &amp; Company in its private equity practice. 
+    I also worked at Microsoft Research in the Health Futures division, driving strategy for biomedical AI moonshots.
+  </p>
 
-        <p>  
-          I am interested in all things healthcare, life sciences, AI/ML, and venture!
-        </p>
-      </section>
-    </main>
+  <p>
+    My other experiences include startup roles across regenerative medicine and insurtech, pipeline strategy for computational drug discovery, and academic technology transfer.
+  </p>
+
+  <p>
+    I am interested in all things healthcare, life sciences, AI/ML, and venture!
+  </p>
+</section>
+
 
     <footer>
       © <span id="y"></span> Anson Zhou · <a href="/">anson-zhou.github.io</a>
