Update affiliation and sameAs properties in JSON-LD

--- a/index.html
+++ b/index.html
@@ -30,17 +30,50 @@
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Anson Zhou",
+    "givenName": "Anson",
+    "familyName": "Zhou",
     "url": "https://anson-zhou.github.io",
+    "image": "https://anson-zhou.github.io/images/profile.png",
     "jobTitle": "MD/MBA Candidate",
-    "affiliation": {"@type":"CollegeOrUniversity","name":"Stanford University"},
+    "affiliation": [
+      {
+        "@type": "CollegeOrUniversity",
+        "name": "Stanford University School of Medicine",
+        "url": "https://med.stanford.edu/profiles/anson-zhou"
+      },
+      {
+        "@type": "CollegeOrUniversity",
+        "name": "Stanford Graduate School of Business",
+        "url": "https://www.gsb.stanford.edu/"
+      },
+      {
+        "@type": "EducationalOrganization",
+        "name": "Knight-Hennessy Scholars Program",
+        "url": "https://knight-hennessy.stanford.edu/people/anson-zhou"
+      },
+      {
+        "@type": "Organization",
+        "name": "Pear VC",
+        "url": "https://pear.vc/"
+      }
+    ],
+    "alumniOf": {
+      "@type": "CollegeOrUniversity",
+      "name": "Johns Hopkins University"
+    },
     "sameAs": [
       "https://www.linkedin.com/in/anson-zhou",
       "https://scholar.google.com/citations?user=ETbbsnoAAAAJ&hl=en&inst=8389273007308439986",
       "https://orcid.org/0000-0001-6045-6083",
-      "https://github.com/anson-zhou"
+      "https://github.com/anson-zhou",
+      "https://x.com/ansonyzhou",
+      "https://bsky.app/profile/ansonyzhou.bsky.social",
+      "https://profiles.stanford.edu/anson-zhou",
+      "https://knight-hennessy.stanford.edu/people/anson-zhou"
     ]
   }
   </script>
+
 
   <!-- ====== STYLE ====== -->
   <style>
