--- a/index.html
+++ b/index.html
@@ -201,13 +201,23 @@
   </p>
 </section>
 
-</div>
+<!-- ====== FOOTER ====== -->
+<footer style="
+  max-width:700px;
+  margin:2rem auto;
+  text-align:center;
+  font-size:0.9rem;
+  color:#666;
+">
+  © <span id="y"></span> Anson Zhou · 
+  <a href="https://anson-zhou.github.io" target="_blank" rel="noopener" style="color:#0066cc;text-decoration:none">
+    anson-zhou.github.io
+  </a>
+</footer>
 
-    <footer>
-      © <span id="y"></span> Anson Zhou · <a href="/">anson-zhou.github.io</a>
-    </footer>
-  </div>
-
-  <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
+<script>
+  document.getElementById('y').textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
+
