--- a/index.html
+++ b/index.html
@@ -202,17 +202,20 @@
   </p>
 </section>
 
-<!-- ====== FOOTER ====== -->
+<!-- ====== FOOTER (outside the box but centered) ====== -->
 <footer style="
   max-width:700px;
-  margin:2rem auto;
+  margin:2rem auto 3rem; 
   text-align:center;
   font-size:0.9rem;
   color:#666;
 ">
   © <span id="y"></span> Anson Zhou · 
-  <a href="https://anson-zhou.github.io" target="_blank" rel="noopener" style="color:#0066cc;text-decoration:none">
-    anson-zhou.github.io
+  <a href="https://anson-zhou.github.io" target="_blank" rel="noopener" 
+     style="color:#0066cc;text-decoration:none;transition:color 0.2s;"
+     onmouseover="this.style.color='#3399ff'"
+     onmouseout="this.style.color='#0066cc'">
+     anson-zhou.github.io
   </a>
 </footer>
 
@@ -221,4 +224,5 @@
 </script>
 </body>
 </html>
+
 
