Remove Stanford Profile link from index.html
Removed Stanford Profile link and adjusted text.

--- a/index.html
+++ b/index.html
@@ -140,8 +140,6 @@
             <a href="https://scholar.google.com/citations?user=ETbbsnoAAAAJ" target="_blank" rel="noopener">Google Scholar</a>
             <span class="slash">/</span>
             <a href="https://orcid.org/0000-0001-6045-6083" target="_blank" rel="noopener">ORCID</a>
-            <span class="slash">/</span>  
-            <a href="https://profiles.stanford.edu/anson-zhou" target="_blank" rel="noopener">Stanford Profile</a>
             <span class="slash">/</span>            
             <a href="https://x.com/ansonyzhou" target="_blank" rel="noopener">Twitter</a>
             <span class="slash">/</span>
@@ -181,7 +179,11 @@
     <a href="https://med.stanford.edu/profiles/anson-zhou" target="_blank" rel="noopener">
       Stanford University School of Medicine
     </a> 
-    &amp; Graduate School of Business, funded through the 
+    &amp; 
+    <a href="https://profiles.stanford.edu/anson-zhou" target="_blank" rel="noopener">
+      Graduate School of Business
+    </a>
+    , funded through the 
     <a href="https://knight-hennessy.stanford.edu/people/anson-zhou" target="_blank" rel="noopener">
       Knight-Hennessy Scholarship
     </a>. 
