Update university name in About section

--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
   <h2 style="margin:0 0 8px 0;font-size:20px">About</h2>
 
   <p>
-    Hi! I am an MD/MBA candidate at 
+    Hi! I am an MD/MBA candidate at Stanford University 
     <a href="https://med.stanford.edu/profiles/anson-zhou" target="_blank" rel="noopener">
-      Stanford University School of Medicine
+      School of Medicine
     </a> 
     &amp; 
     <a href="https://profiles.stanford.edu/anson-zhou" target="_blank" rel="noopener">
