Revise personal statement in index.html
Updated personal background information and interests.

--- a/index.html
+++ b/index.html
@@ -190,15 +190,11 @@
 
   <p>
     I graduated with a BS in biomedical engineering from Johns Hopkins University and was previously a strategy consultant at Bain &amp; Company in its private equity practice. 
-    I also worked at Microsoft Research in the Health Futures division, driving strategy for biomedical AI moonshots.
-  </p>
+    I also worked at Microsoft Research in the Health Futures division, driving strategy for biomedical AI moonshots. My other experiences include startup roles across regenerative medicine and insurtech, pipeline strategy for computational drug discovery, and academic technology transfer.
+  <p>
 
   <p>
-    My other experiences include startup roles across regenerative medicine and insurtech, pipeline strategy for computational drug discovery, and academic technology transfer.
-  </p>
-
-  <p>
-    I am interested in all things healthcare, life sciences, AI/ML, and venture!
+    I am interested in all things healthcare, life sciences, AI/ML, and venture. If you have similar interests, would love to hear from you!
   </p>
 </section>
 
