--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
         <a href="/">Home</a>
         <a href="/experiences.html">Experiences</a>
         <a href="/research.html">Research</a>
+        <a href="/media.html">Media</a>
+        
       </nav>
     </header>
 
