Update Open Graph description and subtitle

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- ====== OPEN GRAPH ====== -->
   <meta property="og:title" content="Anson Zhou" />
-  <meta property="og:description" content="Stanford MD/MBA · Knight-Hennessy Scholar · Pear VC" />
+  <meta property="og:description" content="Stanford MD/MBA · Pear VC" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://anson-zhou.github.io/" />
   <meta property="og:image" content="https://anson-zhou.github.io/images/profile.png" />
@@ -133,7 +133,7 @@
     <img src="images/profile.png" alt="Anson Zhou portrait" />
     <div>
       <h1>Anson Zhou</h1>
-      <div class="subtitle">Stanford MD/MBA · Knight-Hennessy Scholar · Pear VC</div>
+      <div class="subtitle">Stanford MD/MBA · Pear VC</div>
 
       <!-- ====== INLINE LINKS (no bubbles) ====== -->
       <div class="links-inline" aria-label="key links">
