--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- ====== OPEN GRAPH ====== -->
   <meta property="og:title" content="Anson Zhou" />
-  <meta property="og:description" content="Stanford MD/MBA · Pear VC" />
+  <meta property="og:description" content="Stanford MD/MBA" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://anson-zhou.github.io/" />
   <meta property="og:image" content="https://anson-zhou.github.io/images/profile.png" />
