Remove '· Pear VC' from subtitle

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <img src="images/profile.png" alt="Anson Zhou portrait" />
     <div>
       <h1>Anson Zhou</h1>
-      <div class="subtitle">Stanford MD/MBA · Pear VC</div>
+      <div class="subtitle">Stanford MD/MBA</div>
 
       <!-- ====== INLINE LINKS (no bubbles) ====== -->
       <div class="links-inline" aria-label="key links">
