Fix typo in interest statement

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     </p>
 
     <p>
-      I am interested in all things healthcare, life sciences, AI/ML, and venture. If you have similar interests, would love to hear from you!
+      I am interested in all things healthcare, life sciences, AI/ML, and venture. If you have similar interests, I would love to hear from you!
     </p>
   </section>
 </main> <!-- CLOSES the card -->
