--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         <a href="/">Home</a>
         <a href="/experiences.html">Experiences</a>
         <a href="/research.html">Research</a>
+        <a href="/research.html">Publications</a>        
         <a href="/media.html">Media</a>
         
       </nav>
