Update bio with lab affiliations and links
Added links to Daneshjou and Adeli labs in the bio section.

--- a/index.html
+++ b/index.html
@@ -180,6 +180,12 @@
       <a href="https://profiles.stanford.edu/anson-zhou" target="_blank" rel="noopener">Graduate School of Business</a>,
       funded through the 
       <a href="https://knight-hennessy.stanford.edu/people/anson-zhou" target="_blank" rel="noopener">Knight-Hennessy Scholarship</a>.
+      Currently, I am part of the 
+      <a href="https://https://www.daneshjoulab.com/" target="_blank" rel="noopener">Daneshjou</a> 
+      and 
+      <a href="https://https://stai.stanford.edu/" target="_blank" rel="noopener">Adeli</a> 
+      labs, broadly working on AI in healthcare.
+      
       I am also a Venture Fellow on the health + bio investing teams at Pear VC.
     </p>
 
