--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
       funded through the 
       <a href="https://knight-hennessy.stanford.edu/people/anson-zhou" target="_blank" rel="noopener">Knight-Hennessy Scholarship</a>.
       Currently, I am part of the 
-      <a href="https://https://www.daneshjoulab.com/" target="_blank" rel="noopener">Daneshjou</a> 
+      <a href="https://www.daneshjoulab.com/" target="_blank" rel="noopener">Daneshjou</a> 
       and 
-      <a href="https://https://stai.stanford.edu/" target="_blank" rel="noopener">Adeli</a> 
+      <a href="https://stai.stanford.edu/" target="_blank" rel="noopener">Adeli</a> 
       labs, broadly working on AI in healthcare.
       
       I am also a Venture Fellow on the health + bio investing teams at Pear VC.
