Update subtitle and interests in index.html

--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
     <img src="images/profile.png" alt="Anson Zhou portrait" />
     <div>
       <h1>Anson Zhou</h1>
-      <div class="subtitle">Stanford MD/MBA</div>
+      <div class="subtitle">Stanford MD/MBA Candidate · Knight-Hennessy Scholar</div>
+
 
       <!-- ====== INLINE LINKS (no bubbles) ====== -->
       <div class="links-inline" aria-label="key links">
@@ -195,7 +196,7 @@
     </p>
 
     <p>
-      I am interested in all things healthcare, life sciences, AI/ML, and venture. If you have similar interests, I would love to hear from you!
+      My interests span healthcare, life sciences, AI/ML, and venture. I welcome collaborations or conversations at the intersection of these domains!
     </p>
   </section>
 </main> <!-- CLOSES the card -->
