Change 'Experiences' link to 'Experience'

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div style="font-weight:800;">Anson Zhou</div>
       <nav>
         <a href="/">Home</a>
-        <a href="/experiences.html">Experiences</a>
+        <a href="/experiences.html">Experience</a>
         <a href="/research.html">Research</a>
         <a href="/research.html">Publications</a>        
         <a href="/media.html">Media</a>
