Update link for Pear VC in index.html

--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
       <a href="https://stai.stanford.edu/" target="_blank" rel="noopener">Adeli</a> 
       labs, broadly working on AI in healthcare.
       
-      I am also a Venture Fellow on the health + bio investing teams at Pear VC.
+      I am also a Venture Fellow on the health + bio investing teams at 
+      <a href="https://pear.vc/" target="_blank" rel="noopener">Pear VC</a>.
     </p>
 
     <p>
